--- a/frontend/src/components/UserPanel/UserPanel.module.css
+++ b/frontend/src/components/UserPanel/UserPanel.module.css
@@ -52,6 +52,18 @@
 }
 .panel__devices {
   gap: 1rem;
+  overflow-y: auto;
+  height: 230px;
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 1.2rem;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-accent);
+    border-radius: 0.2rem;
+  }
 }
 .panel__centerContent {
   align-items: center;
@@ -67,6 +79,7 @@
 .panel__centerContentImage {
   width: 14rem;
 }
+
 .panel__addNewDevice,
 .panel__bottom_button {
   color: var(--color-font-primary);
@@ -78,17 +91,21 @@
   font-weight: 700;
   cursor: pointer;
   transition: 0.2s;
-  &:hover {
-    transform: scale(1.1);
-  }
 }
+
+.panel__addNewDevice {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .panel__bottom_button {
   width: 100%;
   margin-top: 4rem;
 }
 
 .panel__buttons {
-  margin: 7.6rem auto 0 auto;
+  margin: 15rem auto 0 auto;
   width: 100%;
   display: flex;
   justify-content: center;
