--- a/frontend/src/components/Map/Map.module.css
+++ b/frontend/src/components/Map/Map.module.css
@@ -26,7 +26,7 @@
   background-color: var(--color-background-light);
   width: 32rem;
   padding: 2.3rem 1.7rem;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 }
 
 .deviceInfoWrapper {
@@ -110,7 +110,7 @@
   content: '';
   position: absolute;
   inset: 0;
-  padding: 2px;
+  padding: 0.2rem;
   border-radius: inherit;
   background: linear-gradient(#acf254, #20944e);
   mask:
@@ -167,8 +167,8 @@ p.metric__number {
 }
 
 .gatewayInfo {
-  margin-top: 8px;
-  padding-top: 8px;
+  margin-top: 0.8rem;
+  padding-top: 0.8rem;
   border-top: 1px solid #e0e0e0;
   text-align: center;
 }
