--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
   color: var(--color-font-primary);
   padding: 1rem 2.6rem 1rem 3rem;
   height: 6rem;
+  position: relative;
 }
 
 .header__filters {
@@ -70,4 +71,37 @@
   height: 4rem;
   width: 4rem;
   border-radius: 100%;
+}
+
+.dropdown {
+  width: 37.5rem;
+  max-height: 35rem;
+  overflow-y: scroll;
+  border-radius: 0.4rem;
+  background-color: var(--color-background-light);
+  position: absolute;
+  top: 85%;
+  left: 46.5%;
+  z-index: 999;
+
+  ul {
+    list-style: none;
+  }
+}
+
+.dropdown__text {
+  color: var(--color-font-primary);
+  opacity: 0.6;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 2.4rem;
+  letter-spacing: 0.15px;
+  padding: 0.53rem 1.035rem;
+}
+
+.dropdown__text:hover {
+  font-weight: 600;
+  background-color: var(--color-accent);
+  opacity: 1;
+  cursor: pointer;
 }
