--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -19,7 +19,7 @@
   align-items: center;
   gap: 0.8rem;
   padding: 0.6rem 0.8rem 0.6rem 1.5rem;
-  border: 1px solid rgba(from var(--color-font-primary) r g b / 0.25);
+  border: 0.1rem solid rgba(from var(--color-font-primary) r g b / 0.25);
   border-radius: 1.7rem;
 }
 
