--- a/frontend/src/components/DevicePanel/devicePanel.module.css
+++ b/frontend/src/components/DevicePanel/devicePanel.module.css
@@ -74,6 +74,11 @@
     font-weight: 700;
     line-height: 2.4rem;
     padding: 0.6rem 2.4rem;
+    background-color: var(--color-background-light);
+
+    &.active {
+      background-color: var(--color-accent);
+    }
   }
 }
 
@@ -88,6 +93,7 @@
 .metric {
   background-color: var(--color-background-light);
   padding: 2rem;
+  padding-bottom: 1rem;
   width: 15.4rem;
   border-radius: 3px;
 }
@@ -107,6 +113,10 @@
     margin-top: 0.2rem;
     color: var(--color-font-light);
   }
+}
+
+.metric__rangeInvisible {
+  visibility: hidden;
 }
 
 .center {
