Implement Edit Device feature

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
   --color-font-dark: rgb(84, 84, 84);
   --color-font-light: rgb(196, 196, 196);
   --color-font-light-2: rgb(106, 106, 106);
+  --color-red: rgb(235, 87, 87);
   --normal-font: 'Source Sans 3', sans-serif;
   --heading-font: 'Fira Sans', sans-serif;
 }
