--- a/frontend/src/components/DevicePanel/devicePanel.module.css
+++ b/frontend/src/components/DevicePanel/devicePanel.module.css
@@ -137,3 +137,63 @@
     color: var(--color-font-primary);
   }
 }
+
+.panel__editMode {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  flex: 1;
+  margin-top: 3.6rem;
+}
+
+.panel__input {
+  background-color: var(--color-background-light);
+  color: var(--color-font-primary);
+  flex: 1;
+  padding: 0.4rem 0.6rem;
+  border: 2px solid transparent;
+  outline: none;
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.panel__input:focus {
+  border: 2px solid var(--color-accent);
+}
+
+.panel__finishBtn,
+.panel__cancelBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.4rem;
+  border: none;
+  border-radius: 10rem;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.panel__finishBtn {
+  color: var(--color-font-primary);
+  transform: scale(1.3);
+}
+
+.panel__finishBtn:hover:not(:disabled) {
+  transform: scale(1.5);
+}
+
+.panel__cancelBtn {
+  background-color: var(--color-red);
+  color: var(--color-font-primary);
+  transform: scale(0.9);
+}
+
+.panel__cancelBtn:hover:not(:disabled) {
+  transform: scale(1);
+}
+
+.panel__finishBtn:disabled,
+.panel__cancelBtn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
