--- a/frontend/src/components/Onboarding/onboarding.module.css
+++ b/frontend/src/components/Onboarding/onboarding.module.css
@@ -2,10 +2,23 @@
   height: 64rem;
   width: 64rem;
   background-color: var(--color-background-dark);
-  position: relative;
+  position: absolute;
   left: 50%;
   transform: translate(-50%);
-  top: 60px;
+  top: 7rem;
+}
+
+.onboarding__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
 .close {
